Fixed the improvements
Signed-off-by: AayushSaini101 <kumaraayush9810@gmail.com>